--- a/JWT_Token/appsettings.json
+++ b/JWT_Token/appsettings.json
@@ -11,5 +11,8 @@
   },
   "JwtConfig": {
     "Secret": "LWOEQsNBLCU5KMvVC6PZhuj0Ta6JPJ0vm6kWW81V"
+  },
+  "EmailConfig": {
+    "API_KEY":  "gdfge4sfd72rjfds72aslfdk928jakds"
   }
 }
