--- a/JWT_Token/appsettings.json
+++ b/JWT_Token/appsettings.json
@@ -10,7 +10,8 @@
     "Db": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=testdb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "JwtConfig": {
-    "Secret": "LWOEQsNBLCU5KMvVC6PZhuj0Ta6JPJ0vm6kWW81V"
+    "Secret": "LWOEQsNBLCU5KMvVC6PZhuj0Ta6JPJ0vm6kWW81V",
+    "ExpiryTimeFrame": "00:01:00"
   },
   "EmailConfig": {
     "API_KEY":  "gdfge4sfd72rjfds72aslfdk928jakds"
